syntax = "proto3";

message StatusCancel {
  bool statusCancel = 1;
}